# beer_mouse_clicker

./: Cargo.toml  LICENSE  README.md  README_EN.md  app.res  build.rs
src/: config.rs  constants.rs  input.rs  lang.rs  main.rs  state.rs  tray.rs
src/app/: add_popup.rs  edit_popup.rs  mod.rs  recorder.rs  theme.rs  util.rs
